# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  config.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230522130352_make_status_not_null_in_subscriptions.sql  20230522130714_create_subscription_tokens_table.sql  20230613080857_seed_user.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
