[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Lukas Wanner"]
edition = "2021"

[lib]
# We could use any path here, but we are following the cummunity convention
# We could specify a library name useing the 'name' field. If unspecified, 
# cargo will default to 'package.name' which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries
# If you want to manage multiple libraries in the same repository
# have a look at the worksapce feature 
[[bin]]
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
