[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Lukas Wanner"]
edition = "2021"

[lib]
# We could use any path here, but we are following the cummunity convention
# We could specify a library name useing the 'name' field. If unspecified, 
# cargo will default to 'package.name' which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries
# If you want to manage multiple libraries in the same repository
# have a look at the worksapce feature 
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version ="1", features= ["derive"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "offline", "migrate"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features= false, features = ["clock"] }

# tracing
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.7"

once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }

serde-aux = "4"

# chapter 6 - rejecting invalid subscribers
unicode-segmentation = "1"

# email checking
validator = "0.16"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"